--- a/U3-W10-D5/src/app/todos/todos.page.html
+++ b/U3-W10-D5/src/app/todos/todos.page.html
@@ -1,7 +1,2 @@
-<input type="text" />
-<button>Add</button>
-<div>
-  <li>fare x</li>
-  <li>fare y</li>
-  <li>fare z</li>
-</div>
+<app-add-todo></app-add-todo>
+<app-list-todos [todosList]="listaTodos"></app-list-todos>
