--- a/U3-W10-D5/src/app/header/header.component.scss
+++ b/U3-W10-D5/src/app/header/header.component.scss
@@ -17,7 +17,7 @@ button{
   border: none;
   border-radius: 8px;
 }
-button:hover, button:active, button:focus{
+button:hover, button:focus, button:active,{
   background-color: rgb(65, 65, 203);
   color: white;
   box-shadow: 0px 5px 15px rgba(114, 114, 250, 0.141);
