--- a/U3-W10-D5/src/app/todos/list-todos/list-todos.component.html
+++ b/U3-W10-D5/src/app/todos/list-todos/list-todos.component.html
@@ -1,15 +1,13 @@
 <div>
-  <div *ngFor="let item of todosList">
+  <div>
     <li>
-      {{ item.todo }} <span><i class="bi bi-x-circle"></i></span>
+      fare x<span><i class="bi bi-x-circle"></i></span>
     </li>
-    <li>fare y</li>
-    <li>fare z</li>
-    <!-- <tbody>
-    <tr>
-      <th>ciao</th>
-      <td>wooso</td>
-    </tr>
-  </tbody> -->
+    <li>
+      fare y<span><i class="bi bi-x-circle"></i></span>
+    </li>
+    <li>
+      fare z<span><i class="bi bi-x-circle"></i></span>
+    </li>
   </div>
 </div>
